tests/semantic/undeclared_udfs/undeclared_udfs.dl
.decl A(x: number)

A(@foo(x)) :- @goo(x) < 10.

.output A
